--- a/global/style.css
+++ b/global/style.css
@@ -47,6 +47,7 @@ main {
 	overflow-x:hidden;
 	overflow-y:scroll;
 	padding: 0 16vw;
+	padding-bottom: 16rem;
 }
 .folded main {
 	padding: 0 22vw;
